--- a/react-frontend/src/style/NoteView.scss
+++ b/react-frontend/src/style/NoteView.scss
@@ -5,5 +5,7 @@
   float: left;
   overflow: hidden;
   height: 100%;
-  width: calc(100% - #{$sidebar_width});
+  width: 70%;
+
+  background-color: $theme_background;
 }
