--- a/react-frontend/src/style/NoteTitleBar.scss
+++ b/react-frontend/src/style/NoteTitleBar.scss
@@ -12,6 +12,7 @@
     line-height: 20px;
     resize: none;
     height: 20px;
+    width: 200%;
     border: none;
     background-color: transparent;
 
