--- a/react-frontend/src/style/NoteUserList.scss
+++ b/react-frontend/src/style/NoteUserList.scss
@@ -1,7 +1,42 @@
 @import "main.scss";
 
+$invite_dialog_width: 400px;
+
 .NoteUserList {
   width: 100%;
-  height: 50px;
+  height: 40px;
   background-color: $theme_border;
+
+  .userlist {
+    display: block;
+    float: left;
+    width: calc(100% - #{$invite_dialog_width});
+  }
+
+  .invite_dialog {
+    display: block;
+    float: right;
+    width: $invite_dialog_width;
+
+    input {
+      width: 280px;
+      height: 40px;
+      border: none;
+      background-color: $theme_background;
+      outline: none;
+      font-size: 15px;
+      font-weight: 500;
+      padding-left: 6px;
+    }
+
+    button {
+      width: 120px;
+      height: 40px;
+      border: none;
+      border-radius: 0px;
+      background-color: $theme_primary;
+      color: $theme_primary_text_light;
+      font-size: 15px;
+    }
+  }
 }
